2003-08-27  Ion Badulescu  <ionut@buggy.badula.org>

	* README.autofs: added a paragraph about the resource consumption
	of auto maps over autofs

	* amd/amfs_generic.c (amfs_lookup_one_mntfs): moved the setting of
	the MFF_IS_AUTOFS flag from init_mntfs() to
	amfs_lookup_one_mntfs(), where it belongs

	* amd/mntfs.c (init_mntfs): ditto

2003-08-27  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/ops_nfs.c (got_nfs_fh): make the error EACCES if we are
	denied a filehandle by the server (used to be EIO)

2003-08-27  Erez Zadok  <ezk@a-bsdi42.fsl.cs.sunysb.edu>

	* conf/nfs_prot/nfs_prot_bsdi3.h: support na_uid and na_gid.

2003-08-27  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/autofs/autofs_linux.c (autofs_mount_succeeded): force
	daemon-initiated timeouts on autofs filesystems, since apparently
	they appear as "always busy" to the kernel-based expiration routine

2003-08-26  Ion Badulescu  <ionut@buggy.badula.org>

	* NEWS: updated

	* conf/autofs/autofs_linux.h (AUTOFS_LINK_FS_FLAGS): remove
	FS_ON_AUTOFS
	(AUTOFS_LINKX_FS_FLAGS): ditto

	* conf/autofs/autofs_solaris_v1.h (AUTOFS_LINK_FS_FLAGS): remove
	FS_ON_AUTOFS
	(AUTOFS_LINKX_FS_FLAGS): ditto

	* conf/autofs/autofs_solaris_v2_v3.h (AUTOFS_LINK_FS_FLAGS): remove
	FS_ON_AUTOFS
	(AUTOFS_LINKX_FS_FLAGS): ditto

	* amd/amfs_generic.c (amfs_lookup_one_mntfs): don't modify the
	original opt_fs, instead store the new mount point for autofs in a
	temporary variable and pass it around. Fixes a problem with the
	link side of nfsl.

2003-08-25  Ion Badulescu  <ionut@moisil.badula.org>

	* NEWS: updated

	* amd/ops_nfs.c (prime_nfs_fhandle_cache): use get_mntfs_wchan to
	initialize the fh_wchan member of the cache entry
	(prime_nfs_fhandle_cache): use get_mntfs_wchan for the wchan_t
	argument of call_mountd()

	* amd/map.c (free_map_if_success): use get_mntfs_wchan for the
	wchan_t argument of wakeup()

	* amd/amfs_nfsx.c (amfs_nfsx_cont): use get_mntfs_wchan for the